# fives

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  CMakeLists_new.txt  G5K_INSTALL.md  IOJobsOct.yml  IOJobs_1.yml  IOJobs_10.yml  README.md  config.yml
CMakeModules/: FindFSMod.cmake  FindSimGrid.cmake  FindWRENCH.cmake
bokeh_server/: .gitignore  README.md  TreeMap.ipynb  Untitled.ipynb  requirements.txt  storage_service_operations.yml  timestamped_io_operations.yml  trace_analysis.ipynb  tree_map_plot.py  tree_map_server.py
bokeh_server/app/: main.py
configs/: bluewaters.yml  bluewaters_config.yml  bluewaters_config_partial_calib.yml  lustre_config.yml  lustre_config_3OST1OSS.yml  lustre_config_3OST3OSS.yml  lustre_config_hdd.yml  lustre_config_het_oss.yml  std_config.yml  test_config.yml  theta_config.yml  theta_config_574382.yml
configs/test_configs/: lustre_config_2OSS_3OST.yml  lustre_config_3OSS_3OST.yml  lustre_config_base.yml  lustre_config_hdd.yml  lustre_config_het_oss.yml  rr_config.yml  test_config.yml
data/: .python-version  extract_traces.py  io_operations.yml  platform.xml  storage_service_operations.yml  theta2022_week4_1job.yaml
data/test_data/: IOJobsTest_10.yml  IOJobsTest_6_LustreSim.yml  IOJobsTest_6_small_IO.yml  IOJobsTest_LustreSim3jobs.yml  IOJobsTest__invalid_computeTime.yml  IOJobsTest__invalid_coresUsed.yml  IOJobsTest__invalid_nodesUsed.yml  IOJobsTest__invalid_runTime.yml  test_1_job.yml  test_1_job_small.yml  test_2_jobs_bad_order.yml  test_2_jobs_small.yml  theta2022_week4.yaml  theta2022_week4_trunc.yaml
functional_test/: .gitignore  functional_test.py  requirements.txt
include/: AllocationStrategy.h  BuildInfo.h  BuildInfo.h.in  ConfigDefinition.h  Constants.h  Controller.h  JobDefinition.h  Platform.h  Simulator.h  Utils.h
profiling_temp/: full_week_compute_profiling  run_10_times.sh  simgrid_master_runs  simgrid_v3_34_runs  trunc_week_1_compute_profiling  trunc_week_profiling  week_1_compute_profiling_3202  week_1_compute_profiling_3203  week_1_compute_profiling_3204  week_1_compute_profiling_3205  week_1_compute_profiling_3206  week_1_compute_profiling_3207  week_1_compute_profiling_3208  week_1_compute_profiling_3209  week_1_compute_profiling_3210  week_1_compute_profiling_3211  week_1_compute_profiling_3212  week_1_compute_profiling_3213  week_1_compute_profiling_3214  week_1_compute_profiling_3215  week_1_compute_profiling_3216  week_1_compute_profiling_3217  week_1_compute_profiling_3218  week_1_compute_profiling_3219  week_1_compute_profiling_3220  week_1_compute_profiling_3221  week_1_compute_profiling_3222  week_1_compute_profiling_3223  week_1_compute_profiling_3224  week_1_compute_profiling_3225  week_1_compute_profiling_3226  week_1_compute_profiling_3227  week_1_compute_profiling_3228  week_1_compute_profiling_3229  week_1_compute_profiling_3230  week_1_compute_profiling_3231  week_1_compute_profiling_3232  week_1_compute_profiling_3233  week_1_compute_profiling_3714  week_1_compute_profiling_3715  (+63 more)
results/: .gitignore  AX_Optimization.ipynb  SimulationAnalysis.ipynb  build_pages.py  config_temp_stuck  plot_simulated_job.py  requirements.txt  run_analysis.py  run_calibration.py  run_calibration_moo.py  run_calibration_parallel.py  run_optimisation.py
results/.ipynb_checkpoints/: SimulationAnalysis-checkpoint.ipynb  simulatedJobs_theta2022_week4__StorAlloc_Theta_Lustre_fs0_0.0.1-checkpoint.yml  simulatedJobs_theta2022_week6__StorAlloc_Theta_Lustre_fs0_0.0.1-checkpoint.yml
results/exp_configurations/: calibrated_config.yaml  calibration_config.yaml  theta_config.yml
results/exp_datasets/: bluewaters_iocluster_2019-09-09_2019-09-23.yaml  theta2022_week38.yaml  theta2022_week39.yaml  theta2022_week4.yaml  theta2022_week41.yaml  theta2022_week4_574382.yaml  theta2022_week4_job574381.yaml  theta2022_week4_job574382.yaml  theta2022_week4_medium.yaml  theta2022_week4_tiny.yaml  theta2022_week6.yaml  theta2022_week_medium.yaml
results/experiments/: Plots.ipynb  run_analysis.py  run_month_analysis_cat1.sh  theta_config_calibrated_cat1.yml
results/experiments/months_718/: calibrated_config_p2024-3-25-718.yaml  parallel_calibration2024-3-25-718_settings.yaml
results/experiments/months_955/: calibrated_config_p2024-3-13-955.yaml  parallel_calibration2024-3-13-955_settings.yaml
results/web/: index.html
results/web_template/: index.html  result_page.html
scripts/: .gitignore  DiskBandwidthDegradation.ipynb  ParticipatingNodesModel.ipynb  README.md  build_pages.py  index.html  plot_simulated_job.py  requirements.txt  run_analysis.py  run_analysis_legacy.py  run_calibration.py  run_calibration_moo.py  run_calibration_parallel.py  run_calibration_parallel_sig.py
scripts/time_plots/: readme.md
scripts/web_template/: result_page.html
src/: AllocationStrategy.cpp  ConfigDefinition.cpp  Controller.cpp  JobDefinition.cpp  Platform.cpp  Platform.h  Simulator.cpp  Utils.cpp  main.cpp
test/: AllocationStrategyTest.cpp  FunctionalTest.cpp  README.md  UtilsTest.cpp  main.cpp
test/include/: TestConstants.h
